--- a/html-basic.html
+++ b/html-basic.html
@@ -114,7 +114,7 @@
       </dd>
       <dt>照片</dt>
       <dd>
-        <label><input type="file" hidden>点我上传照片，我比文件上传按钮好看</label>
+        <label><input type="file" hidden accept="image/*">点我上传照片，我比文件上传按钮好看</label>
       </dd>
       <dt>肤色</dt>
       <dd>
