--- a/html-basic.html
+++ b/html-basic.html
@@ -19,7 +19,7 @@
   <p>
     <a href="https://jd.com" target="_blank">在新窗口打开京东</a>
     <a href="mailto:freezing.dawn@outlook.com">点击给我发邮件</a>
-    <a href="#botton">跳转到本页的底部</a>
+    <a href="#bottom">跳转到本页的底部</a>
     <a href="https://drscdn.500px.org/photo/229389427/m%3D1170/v2?user_id=7012987&webp=true&sig=196fa0c161aa562478d08571764872f7d69a346c3c0b2e12aa00e2c6414eb28b"
       download>点我可以下载一个文件</a>
   </p>
@@ -136,7 +136,60 @@
     <input type="reset" value="重置">
   </form>
   <hr>
-  <div id="#botton"></div>
+  <table border="1">
+    <caption>货品列表</caption>
+    <col>
+    <col bgcolor="red">
+    <tr>
+      <th>编号</th>
+      <th>品名</th>
+      <th>进价</th>
+      <th>出价</th>
+    </tr>
+    <tr>
+      <th>001</th>
+      <td>苹果</td>
+      <td rowspan="2">5</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <th>001</th>
+      <td>橘子</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <th>001</th>
+      <td>香蕉</td>
+      <td>5</td>
+      <td>8</td>
+    </tr>
+    <tr>
+      <th>001</th>
+      <td>山竹</td>
+      <td>5</td>
+      <td>8</td>
+    </tr>
+  </table>
+  <hr>
+  <img src="https://drscdn.500px.org/photo/174778125/m%3D1170_k%3D1/2841ccf2a3720e8e794a6a6930f6ff2c" alt=""
+    title="image title" usemap="#img1" width="300" height="450">
+  <map name="img1">
+    <area shape="rect" coords="55,110,205,200" href="https:www.mi.com" target="_blank" alt="">
+    <area shape="circle" coords="125,265,90" href="" alt="">
+    <area shape="poly" coords="55,80,188,84,230,250,170,390,20,280" href="" alt="">
+  </map>
+  <hr>
+  <a href="https://www.mi.com" target="af">点击我会在下面的frame里打开小米商场，但为什么打不开呢？</a>
+  <br>
+  <iframe src="https://nodejs.org/en/" frameborder="0" name="af"></iframe>
+  <div>
+    怎样&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在这两个字之间空这么大呢？
+    <br>
+    怎样在页面中显示下面的内容呢？
+    <br>
+    &lt;span>&lt;/span>
+  </div>
+  <div id="bottom"></div>
 </body>
 
 </html>
