--- a/css-block-layout.html
+++ b/css-block-layout.html
@@ -71,6 +71,36 @@
       background-color: violet;
       text-align: center;
     }
+
+    div {
+      font-size: 0;
+    }
+
+    div span {
+      display: inline-block;
+      background-color: pink;
+      font-size: 16px;
+      border: solid 3px;
+      width: 180px;
+      height: 40px;
+      box-sizing: border-box;
+      margin-bottom: 15px;
+      xmargin-right: 30px;
+      text-align: center;
+      line-height: 34px;
+    }
+
+    div.c span:hover {
+      background-color: red;
+    }
+
+    div.c span:nth-child(3n - 1) {
+      margin-left: 30px;
+    }
+
+    div.c span:nth-child(3n) {
+      margin-left: 30px;
+    }
   </style>
 </head>
 
@@ -105,6 +135,21 @@
       <li>link</li>
       <li>link</li>
     </ul>
+
+    <div class="c">
+      <span>宽180高40(包含边框)</span>
+      <span>水平间隙30px</span>
+      <span>垂直间隙15px</span>
+      <span>边框宽度3px</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+      <span>产品</span>
+    </div>
   </main>
   <footer>
     ©版权所有<br>本页所有布局均使用块元素
