--- a/game-sprite.html
+++ b/game-sprite.html
@@ -11,12 +11,12 @@
       height: 200px;
       background-position: 0 -20px;
       background-image: url(https://library.kissclipart.com/20180922/hq/kissclipart-platform-character-sprite-png-clipart-sprite-super-25721de8a1b50be2.jpg);
-      transition: 1s linear;
+      transition: 1s steps(5);
     }
     div:hover{
       background-position: -740px -20px;
-      background-position: 0 -300px;
-      background-position: -740px -540px;
+      xbackground-position: 0 -300px;
+      xbackground-position: -740px -540px;
     }
   </style>
 </head>
