--- a/html-basic.html
+++ b/html-basic.html
@@ -32,7 +32,7 @@
   <p>
     <em>这几种强调</em> <strong>有什么</strong> <b>区别呢？</b> <u>这个呢？</u> <i>这个呢？</i>
   </p>
-  <p>&lt;!-- 这段注释需要出现在页面里面 --></p>
+  <p>&lt;!-- 这段注释需要出现在页面里面 --&gt;</p>
   <p>html的注释怎么写？</p>
   <p>下面是一段javascript代码，最合适用何种标签表示呢？</p>
   <pre>
@@ -122,7 +122,7 @@
       </dd>
       <dt>自我介绍</dt>
       <dd>
-        <textarea name="me" cols="30" rows="10">&lt;/textarea></textarea>
+        <textarea name="me" cols="30" rows="10">&lt;/textarea&gt;</textarea>
       </dd>
     </dl>
     <fieldset disabled>
@@ -187,7 +187,7 @@
     <br>
     怎样在页面中显示下面的内容呢？
     <br>
-    &lt;span>&lt;/span>
+    &lt;span&gt;&lt;/span&gt;
   </div>
   <div id="bottom"></div>
 </body>
