--- a/basic-coding.html
+++ b/basic-coding.html
@@ -13,27 +13,27 @@
 </body>
 
 </html>
-<script id="h0103/01" type="x">
+<script id="ch0103/01" type="x">
   var a = Number(prompt())
   var b = Number(prompt())
   var n = a + b
   console.log(n)
 </script>
-<script id="h0103/02" type="x">
+<script id="ch0103/02" type="x">
   var a = Number(prompt())
   var b = Number(prompt())
   var c = Number(prompt())
   var n = (a + b) * c
   console.log(n)
 </script>
-<script id="h0103/03" type="x">
+<script id="ch0103/03" type="x">
   var a = Number(prompt())
   var b = Number(prompt())
   var c = Number(prompt())
   var n = Math.trunc((a + b) / c)
   console.log(n)
 </script>
-<script id="h0103/04" type="x">
+<script id="ch0103/04" type="x">
   var a = Number(prompt())
   var b = Number(prompt())
   var n = Math.trunc(a / b)
@@ -41,19 +41,19 @@
   console.log(n)
   console.log(m)
 </script>
-<script id="h0103/05" type="x">
+<script id="ch0103/05" type="x">
   var a = Number(prompt())
   var b = Number(prompt())
   var n = (a / b).toFixed(9)
   console.log(n)
 </script>
-<script id="h0103/06" type="x">
+<script id="ch0103/06" type="x">
   var a = Number(prompt())
   var b = Number(prompt())
   var n = (b / a * 100).toFixed(3)
   console.log(n + '%')
 </script>
-<script id="h0103/07" type="x">
+<script id="ch0103/07" type="x">
   var x = Number(prompt())
   var a = Number(prompt())
   var b = Number(prompt())
@@ -62,12 +62,12 @@
   var n = (a * Math.pow(x ,3) + b * Math.pow(x ,2) + c * x + d).toFixed(7)
   console.log(n)
 </script>
-<script id="h0103/08" type="x">
+<script id="ch0103/08" type="x">
   var f = Number(prompt())
   var c = (5 * (f - 32) / 9).toFixed(5)
   console.log(c)
 </script>
-<script id="h0103/09" type="x">
+<script id="ch0103/09" type="x">
   var a = Number(prompt())
   var pi = 3.14159
   var n = (2 * a).toFixed(4)
@@ -77,46 +77,46 @@
   console.log(m)
   console.log(i)
 </script>
-<script id="h0103/10" type="x">
+<script id="ch0103/10" type="x">
   var r1 = Number(prompt())
   var r2 = Number(prompt())
   var r = (1 / (1 / r1 + 1 / r2)).toFixed(2)
   console.log(r)
 </script>
-<script id="h0103/11" type="x">
+<script id="ch0103/11" type="x">
   var a = Number(prompt())
   var b = Number(prompt())
   var r = (a % b).toFixed(4)
   console.log(r)
 </script>
-<script id="h0103/12" type="x">
+<script id="ch0103/12" type="x">
   var pi = 3.14
   var r = Number(prompt())
   var v = (4 / 3 * pi * Math.pow(r, 3)).toFixed(2)
   console.log(v)
 </script>
-<script id="h0103/13" type="x">
+<script id="ch0103/13" type="x">
   var n = Number(prompt())
   var a = Math.trunc(n / 100)
   var b = Math.trunc((n % 100) / 10)
   var c = n % 10
   console.log('' + c + b + a)
 </script>
-<script id="h0103/14" type="x">
+<script id="ch0103/14" type="x">
   var pi = 3.14159
   var h = Number(prompt())
   var r = Number(prompt())
   var t = Math.ceil(20000 / (pi * Math.pow(r, 2) * h))
   console.log(t)
 </script>
-<script id="h0103/15" type="x">
+<script id="ch0103/15" type="x">
   var n = Number(prompt())
   var x = Number(prompt())
   var y = Number(prompt())
   var i = n - Math.ceil(y / x)
   console.log(i)
 </script>
-<script id="h0103/16" type="x">
+<script id="ch0103/16" type="x">
   var xa = Number(prompt())
   var xb = Number(prompt())
   var ya = Number(prompt())
@@ -126,7 +126,7 @@
   var z = (Math.sqrt(Math.pow(x, 2) + Math.pow(y, 2))).toFixed(3)
   console.log(z)
 </script>
-<script id="h0103/17" type="x">
+<script id="ch0103/17" type="x">
   var x1 = Number(prompt())
   var y1 = Number(prompt())
   var x2 = Number(prompt())
@@ -139,20 +139,20 @@
   var i = ((a + b + c) / 2).toFixed(2)
   console.log(i)
 </script>
-<script id="h0103/18" type="x">
+<script id="ch0103/18" type="x">
   var a1 = Number(prompt())
   var a2 = Number(prompt())
   var n = Number(prompt())
   var i = a1 + (n - 1) * (a2 - a1)
   console.log(i)
 </script>
-<script id="h0103/19" type="x">
+<script id="ch0103/19" type="x">
   var a = Number(prompt())
   var b = Number(prompt())
   var i = a * b
   console.log(i)
 </script>
-<script id="h0103/20" type="x">
+<script id="ch0103/20" type="x">
   var n = Number(prompt())
   var i = Math.pow(2, n)
   console.log(i)
