--- a/basic-coding.html
+++ b/basic-coding.html
@@ -400,10 +400,191 @@
     console.log('x1=' + i + '+' + j + 'i;x2=' + i + '-' + j + 'i')
   }
 </script>
-<script id="ch0104/21">
+<script id="ch0104/21" type="x">
   var n = Number(prompt())
   var x = Number(prompt())
   var y = Number(prompt())
   var i = n - Math.ceil(y / x)
   console.log(i)
 </script>
+<script id="ch0105/01" type="x">
+  var n = Number(prompt())
+  var a = 0
+  for (var i = 0; i < n; i++) {
+    var age = Number(prompt())
+    a += age
+  }
+  console.log((a / n).toFixed(2))
+</script>
+<script id="ch0105/02" type="x">
+  var j = 12
+  var n = 0
+  for (var i = 0; i < j; i++) {
+    var m = Number(prompt())
+    n += m
+  }
+  console.log('$' + (n / j).toFixed(2))
+</script>
+<script id="ch0105/03" type="x">
+  var n = Number(prompt())
+  var i = 0
+  for (var m = 0, i = 0; m < n; m++) {
+    var j = Number(prompt())
+    i += j
+  }
+  console.log((i / n).toFixed(4))
+</script>
+<script id="ch0105/04" type="x">
+  var n = Number(prompt())
+  var i = 0
+  for (var m = 0; m < n; m++) {
+    var j = Number(prompt())
+    i += j
+  }
+  console.log(i + ' ' + (i / n).toFixed(5))
+</script>
+<script id="ch0105/05" type="x">
+  var n = Number(prompt())
+  var i = 0
+  for (var m = 0; m < n; m++) {
+    var j = Number(prompt())
+    if (i < j) {
+      i = j
+    }
+  }
+  console.log(i)
+</script>
+<script id="ch0105/06" type="x">
+  var n = Number(prompt())
+  var i = 0
+  var j = 0
+  for (var m = 0; m < n; m++) {
+    var k = Number(prompt())
+    if (i < k) {
+      i = k
+    }
+    if (j > k) {
+      j = k
+    }
+  }
+  console.log(i - j)
+</script>
+<script id="ch0105/07" type="x">
+  var n = Number(prompt())
+  var i = 0
+  var j = 0
+  var k = 0
+  for (var m = 0; m < n; m++) {
+    for (var a = 0; a < 3; a++) {
+      var l = Number(prompt())
+      if (a == 0) {
+        i += l
+      } else if (a == 1) {
+        j += l
+      } else {
+        k += l
+      }
+    }
+  }
+  console.log(i + ' ' + j + ' ' + k + ' ' + (i + j + k))
+</script>
+<script id="ch0105/08" type="x">
+  var n = Number(prompt())
+  var i = 0
+  for (var m = 0; m < n - 1; m++) {
+    var j = Number(prompt())
+    i += j
+  }
+  console.log((n - 2) * 180 - i)
+</script>
+<script id="ch0105/09" type="x">
+  var m = Number(prompt())
+  var n = Number(prompt())
+  for (var i = 0; m <= n; m++) {
+    if (m % 2 != 0) {
+      i += m
+    }
+  }
+  console.log(i)
+</script>
+<script id="ch0105/10" type="x">
+  var m = Number(prompt())
+  var n = Number(prompt())
+  for (var i = 0; m <= n; m++) {
+    if (m % 17 == 0) {
+      i += m
+    }
+  }
+  console.log(i)
+</script>
+<script id="ch0105/11" type="x">
+  var k = Number(prompt())
+  var a = 0
+  var b = 0
+  var c = 0
+  for (var i = 0; i < k; i++) {
+    var j = Number(prompt())
+    if (j == 1) {
+      a++
+    } else if (j == 5) {
+      b++
+    } else if (j == 10) {
+      c++
+    }
+  }
+  console.log(a)
+  console.log(b)
+  console.log(c)
+</script>
+<script id="ch0105/12" type="x">
+  var n = Number(prompt())
+  var m = Number(prompt())
+  var i = 0
+  for (var j = 0; j < n; j++) {
+    var k = Number(prompt())
+    if (k == m) {
+      i++
+    }
+  }
+  console.log(m)
+</script>
+<script id="ch0105/13" type="x">
+  var a = Number(prompt())
+  var n = Number(prompt())
+  for (var i = 0; i < n - 1; i++) {
+    a *= 2
+  }
+  console.log(a)
+</script>
+<script id="ch010514"></script>
+<script id="ch010515"></script>
+<script id="ch010516"></script>
+<script id="ch010517"></script>
+<script id="ch010518"></script>
+<script id="ch010519"></script>
+<script id="ch010520"></script>
+<script id="ch010521"></script>
+<script id="ch010522"></script>
+<script id="ch010523"></script>
+<script id="ch010524"></script>
+<script id="ch010525"></script>
+<script id="ch010526"></script>
+<script id="ch010527"></script>
+<script id="ch010528"></script>
+<script id="ch010529"></script>
+<script id="ch010530"></script>
+<script id="ch010531"></script>
+<script id="ch010532"></script>
+<script id="ch010533"></script>
+<script id="ch010534"></script>
+<script id="ch010535"></script>
+<script id="ch010536"></script>
+<script id="ch010537"></script>
+<script id="ch010538"></script>
+<script id="ch010539"></script>
+<script id="ch010540"></script>
+<script id="ch010541"></script>
+<script id="ch010542"></script>
+<script id="ch010543"></script>
+<script id="ch010544"></script>
+<script id="ch010545"></script>
